--- a/小米-笔记本/bjb.html
+++ b/小米-笔记本/bjb.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div class="bjb-all">
+<p class="bjb-all">
     <!--从上到下第一部分-->
     <div class=" bjb-content1">
         <img src="image/bjb-content1.jpg">
@@ -26,6 +26,192 @@
     <!--人气甄选-->
     <div class="bjb-content3">
         <h3>人气甄选&nbsp;&nbsp;热销爆款</h3>
+        <div class="bjb-content3-1">
+            <img src="image/rq-1.jpg">
+
+            <div><a>RedmiBook 14</a><a class="price">￥3999起</a></div>
+                <p class="jieshao">增强版酷睿™处理器&nbsp;独立显卡轻薄便捷...</p><button>立即预订</button>
+        </div>
+
+
+        <div class="bjb-content3-list-1">
+            <ul>
+                <li class="3-list-11"><img src="image/rq-2.jpg">
+                    <p class="xhao">Air&nbsp;12.5"2019款</p>
+                    <p class="jieshao-1">像杂志一样随身携带</p>
+                    <p class="price1">￥3499起<del>￥3599</del></p>
+                    <p><button>立即购买</button></p>
+                </li>
+                <li class="3-list-12"><img src="image/rq-3.webp">
+                    <p class="xhao">笔记本&nbsp;15.6"独显版</p>
+                    <p class="jieshao-1">全面均衡的国民轻薄本</p>
+                    <p class="price1">￥3699起<del>￥3999</del></p>
+                    <p><button>立即购买</button></p>
+
+                </li>
+                <li class="3-list-13"><img src="image/rq-4.jpg">
+                    <p class="xhao">Pro&nbsp;15.6"GTX版</p>
+                    <p class="jieshao-1">更强悍的专业笔记本</p>
+                    <p class="price1">￥5799起<del>￥6299</del></p>
+                    <p><button>立即购买</button></p>
+
+                </li>
+                <li class="3-list-14"><img src="image/rq-5.jpg">
+                    <p class="xhao">Pro&nbsp;15.6"2019款</p>
+                    <p class="jieshao-1">强悍的专业笔记本</p>
+                    <p class="price1">￥4999起<del>￥5599</del></p>
+                    <p><button>立即购买</button></p>
+
+                </li>
+            </ul>
+        </div>
+        <!--第二个列表-->
+        <div class="bjb-content3-1">
+            <img src="image/rq-6.webp">
+
+            <div><a>Air&nbsp;13.3" 2019款</a><a class="price">￥4399起<del>￥4999</del></a></div>
+            <p class="jieshao">独立显卡&nbsp;指纹解锁</p><button>立即购买</button>
+        </div>
+
+
+        <div class="bjb-content3-list-2">
+            <ul>
+                <li class="3-list-21"><img src="image/rq-7.webp">
+                    <p class="xhao">笔记本&nbsp;15.6"集显版</p>
+                    <p class="jieshao-1">全面均衡的国民轻薄本</p>
+                    <p class="price1">￥2799起<del>￥3399</del></p>
+                    <p><button>立即购买</button></p>
+
+                </li>
+                <li class="3-list-22"><img src="image/rq-8.jpg">
+                    <p class="xhao">小米游戏本</p>
+                    <p class="jieshao-1">冷酷的性能怪兽</p>
+                    <p class="price1">￥6499起<del>￥6699</del></p>
+                    <p><button>立即购买</button></p>
+
+                </li>
+            </ul>
+        </div>
+        <!--高价回收-->
+
+        <div class="gjhs">
+            <img src="image/title-img.jpg">
+        </div>
+
+        <h3>RedmiBook &nbsp;14-轻薄本中的性能战士</h3>
+        <div class="bjb-content3-1">
+            <img src="image/rq-1.jpg">
+
+            <div><a>RedmiBook&nbsp;14</a><a class="price">￥3999起</a></div>
+            <p class="jieshao">增强版酷睿™处理器&nbsp;独立显卡轻薄便捷...</p><button>立即购买</button>
+        </div>
+
+        <h3>15.6英寸&nbsp;-i5大屏&nbsp;寝室神器</h3>
+        <div class="bjb-content3-1">
+            <img src="image/rq-33.jpg">
+            <div><a>小米笔记本15.6"2019款独显版</a><a class="price">￥3699起<del>￥3999</del></a></div>
+            <p class="jieshao">全年均衡的国民轻薄本</p><button>立即购买</button>
+        </div>
+
+        <div class="bjb-content3-1">
+            <img src="image/rq-77.jpg">
+        <div><a>小米笔记本15.6"&nbsp;2019款&nbsp;集显版</a><a class="price">￥2799起<del>￥3399</del></a></div>
+        <p class="jieshao">全年均衡的国民轻薄本</p><button>立即购买</button>
+    </div>
+
+        <h3>13英寸&nbsp;高性能轻薄笔记本</h3>
+        <div class="bjb-content3-1">
+            <img src="image/rq-6.webp">
+            <div><a>Air13.3"8G&nbsp;256GB MX250</a><a class="price">￥5299起<del>￥5999</del></a></div>
+            <p class="jieshao">i7处理器 MX250独立显卡 指纹解锁</p><button>立即购买</button>
+        </div>
+
+        <div class="bjb-content3-list-2">
+            <ul>
+                <li class="3-list-21"><img src="image/rq-6.webp">
+                    <p class="xhao">Air3，3"&nbsp;i5 MX250</p>
+                    <p class="jieshao-1">i5处理器 新一代独立显卡</p>
+                    <p class="price1">￥4699起<del>￥5399</del></p>
+                    <p><button>立即购买</button></p>
+
+                </li>
+                <li class="3-list-22"><img src="image/rq-9.jpg">
+                    <p class="xhao">Air3.3"i5 集显 银色</p>
+                    <p class="jieshao-1">全金属机身 高速固态硬盘</p>
+                    <p class="price1">￥4399起<del>￥4999</del></p>
+                    <p><button>立即购买</button></p>
+
+                </li>
+            </ul>
+        </div>
+
+        <h3>12英寸&nbsp;-如杂志般轻薄便捷</h3>
+        <div class="bjb-content3-1">
+            <img src="image/rq-10.jpg">
+            <div><a>Air13.3"8G&nbsp;256GB MX250</a><a class="price">￥5299起<del>￥5999</del></a></div>
+            <p class="jieshao">i7处理器 MX250独立显卡 指纹解锁</p><button>立即购买</button>
+        </div>
+        <div class="bjb-content3-1">
+            <img src="image/rq-11.jpg">
+            <div><a>Air13.3"8G&nbsp;256GB MX250</a><a class="price">￥5299起<del>￥5999</del></a></div>
+            <p class="jieshao">i7处理器 MX250独立显卡 指纹解锁</p><button>立即购买</button>
+        </div>
+
+        <h3>15英寸&nbsp;-强悍专业的高端笔记本</h3>
+        <div class="bjb-content3-list-2">
+            <ul>
+                <li class="3-list-21"><img src="image/rq-4.jpg">
+                    <p class="xhao">Air3，3"&nbsp;i5 MX250</p>
+                    <p class="jieshao-1">i5处理器 新一代独立显卡</p>
+                    <p class="price1">￥4699起<del>￥5399</del></p>
+                    <p><button>立即购买</button></p>
+
+                </li>
+                <li class="3-list-22"><img src="image/rq-5.jpg">
+                    <p class="xhao">Air3.3"i5 集显 银色</p>
+                    <p class="jieshao-1">全金属机身 高速固态硬盘</p>
+                    <p class="price1">￥4399起<del>￥4999</del></p>
+                    <p><button>立即购买</button></p>
+                </li>
+            </ul>
+        </div>
+
+        <h3>游戏本&nbsp;-电竞级性能怪兽</h3>
+        <div class="bjb-content3-1">
+            <img src="image/yxb-1.jpg">
+            <div><a>Air13.3"8G&nbsp;256GB MX250</a><a class="price">￥5299起<del>￥5999</del></a></div>
+            <p class="jieshao">i7处理器 MX250独立显卡 指纹解锁</p><button>立即购买</button>
+        </div>
+        <div class="bjb-content3-list-2">
+            <ul>
+                <li class="3-list-21"><img src="image/yxb-22.jpg">
+                    <p class="xhao">Air3，3"&nbsp;i5 MX250</p>
+                    <p class="jieshao-1">i5处理器 新一代独立显卡</p>
+                    <p class="price1">￥4699起<del>￥5399</del></p>
+                    <p><button>立即购买</button></p>
+
+                </li>
+                <li class="3-list-22"><img src="image/rq-8.jpg">
+                    <p class="xhao">Air3.3"i5 集显 银色</p>
+                    <p class="jieshao-1">全金属机身 高速固态硬盘</p>
+                    <p class="price1">￥4399起<del>￥4999</del></p>
+                    <p><button>立即购买</button></p>
+                </li>
+            </ul>
+        </div>
+
+        <div class="bjb-content3-1" id="yxb">
+            <img src="image/rq-88.jpg">
+            <div><a>Air13.3"8G&nbsp;256GB MX250</a><a class="price">￥5299起<del>￥5999</del></a></div>
+            <p class="jieshao">i7处理器 MX250独立显卡 指纹解锁</p><button>立即购买</button>
+        </div>
+
+
+
+
+
+
+
 
     </div>
 
