--- a/MIUI_seckill/index.html
+++ b/MIUI_seckill/index.html
@@ -23,15 +23,15 @@
   <!-- 时间导航区域 -->
   <nav>
     <div class="seckill current">
-      <span class="seckill_time">10:00</span>
+      <span class="seckill_time">08:00</span>
       <span>抢购中</span>
     </div>
     <div class="seckill">
-      <span class="seckill_time">14:00</span>
+      <span class="seckill_time">12:00</span>
       <span>即将开始</span>
     </div>
     <div class="seckill">
-      <span class="seckill_time">20:00</span>
+      <span class="seckill_time">16:00</span>
       <span>即将开始</span>
     </div>
   </nav>
@@ -45,13 +45,13 @@
         <div class="time-item">
           距结束：
           <strong>
-            <span id="hour">00</span>
+            <span class="hour">00</span>
           </strong>：
           <strong>
-            <span id="minute">00</span>
+            <span class="minute">00</span>
           </strong>：
           <strong>
-            <span id="second">00</span>
+            <span class="second">00</span>
           </strong>
         </div>
       </div>
@@ -326,13 +326,13 @@
         <div class="time-item">
           距开始：
           <strong>
-            <span id="hour2">00</span>
+            <span class="hour">00</span>
           </strong>：
           <strong>
-            <span id="minute2">00</span>
+            <span class="minute">00</span>
           </strong>：
           <strong>
-            <span id="second2">00</span>
+            <span class="second">00</span>
           </strong>
         </div>
       </div>
@@ -534,13 +534,13 @@
         <div class="time-item">
           距开始：
           <strong>
-            <span id="hour3">00</span>
+            <span class="hour">00</span>
           </strong>：
           <strong>
-            <span id="minute3">00</span>
+            <span class="minute">00</span>
           </strong>：
           <strong>
-            <span id="second3">00</span>
+            <span class="second">00</span>
           </strong>
         </div>
       </div>
