--- a/1604-project/seckill.html
+++ b/1604-project/seckill.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -14,23 +15,23 @@
 <body>
   <!-- 头部区域 -->
   <header>
-    <img src="img/l_arrow.png">
+    <img src="images/l_arrow.png">
     <span>小米秒杀</span>
-    <img src="img/collect.png">
-    <img src="img/cart.png">
+    <img src="images/collect.png">
+    <img src="images/cart.png">
   </header>
   <!-- 时间导航区域 -->
   <nav>
     <div class="seckill current">
-      <span class="seckill_time">10:00</span>
+      <span class="seckill_time">08:00</span>
       <span>抢购中</span>
     </div>
     <div class="seckill">
-      <span class="seckill_time">14:00</span>
+      <span class="seckill_time">12:00</span>
       <span>即将开始</span>
     </div>
     <div class="seckill">
-      <span class="seckill_time">20:00</span>
+      <span class="seckill_time">16:00</span>
       <span>即将开始</span>
     </div>
   </nav>
@@ -44,20 +45,20 @@
         <div class="time-item">
           距结束：
           <strong>
-            <span id="hour">00</span>
+            <span class="hour">00</span>
           </strong>：
           <strong>
-            <span id="minute">00</span>
+            <span class="minute">00</span>
           </strong>：
           <strong>
-            <span id="second">00</span>
+            <span class="second">00</span>
           </strong>
         </div>
       </div>
-      <img class="banner" src="img/banner.jpg">
+      <img class="banner" src="images/banner.jpg">
       <ul>
         <li class="seckill_box_lis">
-          <img src="img/phone1-1.jpg">
+          <img src="images/phone1-1.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米8 青春版 6GB+64GB 深空灰</p>
@@ -77,7 +78,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-2.jpg">
+          <img src="images/phone1-2.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米Play 全网通版 4GB+64GB 梦幻蓝</p>
@@ -97,7 +98,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-3.jpg">
+          <img src="images/phone1-3.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米6X 6GB+64GB 赤焰红</p>
@@ -117,7 +118,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-4.jpg">
+          <img src="images/phone1-4.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米8 屏幕指纹版 6GB+128GB 黑色</p>
@@ -137,7 +138,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-5.jpg">
+          <img src="images/phone1-5.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米MIX 2S 6GB+128GB 黑色</p>
@@ -157,7 +158,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-6.jpg">
+          <img src="images/phone1-6.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米MIX 2S 8GB+256GB 陶瓷尊享版 白色</p>
@@ -177,7 +178,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-7.jpg">
+          <img src="images/phone1-7.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米6X 全网通版 6GB+128GB 赤焰红</p>
@@ -197,7 +198,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-8.jpg">
+          <img src="images/phone1-8.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米6X 移动4G+版 6GB+64GB 流沙金</p>
@@ -217,7 +218,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-9.jpg">
+          <img src="images/phone1-9.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米8 屏幕指纹版 8GB+128GB 透明</p>
@@ -237,7 +238,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-10.jpg">
+          <img src="images/phone1-10.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米8 6GB+128GB 白色</p>
@@ -257,7 +258,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-11.jpg">
+          <img src="images/phone1-11.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米8 SE 6GB+64GB 深灰 </p>
@@ -277,7 +278,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-12.jpg">
+          <img src="images/phone1-12.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米Play 全网通版 6GB+64GB 暮光金</p>
@@ -297,7 +298,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-13.jpg">
+          <img src="images/phone1-13.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米8 SE 6GB+64GB 深灰 </p>
@@ -317,7 +318,7 @@
           </div>
         </li>
       </ul>
-      <img class="banner" src="img/banner2.jpg">
+      <img class="banner" src="images/banner2.jpg">
     </div>
     <div class="seckill_box">
       <div class="seckill_box_time">
@@ -325,20 +326,20 @@
         <div class="time-item">
           距开始：
           <strong>
-            <span id="hour2">00</span>
+            <span class="hour">00</span>
           </strong>：
           <strong>
-            <span id="minute2">00</span>
+            <span class="minute">00</span>
           </strong>：
           <strong>
-            <span id="second2">00</span>
+            <span class="second">00</span>
           </strong>
         </div>
       </div>
       <img class="banner" src="images/banner.jpg">
       <ul>
         <li class="seckill_box_lis">
-          <img src="img/phone1-7.jpg">
+          <img src="images/phone1-7.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米6X 全网通版 6GB+128GB 赤焰红</p>
@@ -355,7 +356,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-1.jpg">
+          <img src="images/phone1-1.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米8 青春版 6GB+64GB 深空灰</p>
@@ -372,7 +373,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-2.jpg">
+          <img src="images/phone1-2.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米Play 全网通版 4GB+64GB 梦幻蓝</p>
@@ -389,7 +390,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-5.jpg">
+          <img src="images/phone1-5.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米MIX 2S 6GB+128GB 黑色</p>
@@ -406,7 +407,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-3.jpg">
+          <img src="images/phone1-3.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米6X 6GB+64GB 赤焰红</p>
@@ -423,7 +424,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-4.jpg">
+          <img src="images/phone1-4.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米8 屏幕指纹版 6GB+128GB 黑色</p>
@@ -440,7 +441,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-5.jpg">
+          <img src="images/phone1-5.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米MIX 2S 6GB+128GB 黑色</p>
@@ -457,7 +458,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-6.jpg">
+          <img src="images/phone1-6.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米MIX 2S 8GB+256GB 陶瓷尊享版 白色</p>
@@ -474,7 +475,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-8.jpg">
+          <img src="images/phone1-8.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米6X 移动4G+版 6GB+64GB 流沙金</p>
@@ -491,7 +492,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-11.jpg">
+          <img src="images/phone1-11.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米8 SE 6GB+64GB 深灰 </p>
@@ -508,7 +509,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-10.jpg">
+          <img src="images/phone1-10.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米8 6GB+128GB 白色</p>
@@ -533,20 +534,20 @@
         <div class="time-item">
           距开始：
           <strong>
-            <span id="hour3">00</span>
+            <span class="hour">00</span>
           </strong>：
           <strong>
-            <span id="minute3">00</span>
+            <span class="minute">00</span>
           </strong>：
           <strong>
-            <span id="second3">00</span>
+            <span class="second">00</span>
           </strong>
         </div>
       </div>
       <img class="banner" src="images/banner.jpg">
       <ul>
         <li class="seckill_box_lis">
-          <img src="img/phone1-5.jpg">
+          <img src="images/phone1-5.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米MIX 2S 6GB+128GB 黑色</p>
@@ -563,7 +564,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-7.jpg">
+          <img src="images/phone1-7.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米6X 全网通版 6GB+128GB 赤焰红</p>
@@ -580,7 +581,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-1.jpg">
+          <img src="images/phone1-1.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米8 青春版 6GB+64GB 深空灰</p>
@@ -597,7 +598,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-2.jpg">
+          <img src="images/phone1-2.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米Play 全网通版 4GB+64GB 梦幻蓝</p>
@@ -614,7 +615,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-4.jpg">
+          <img src="images/phone1-4.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米8 屏幕指纹版 6GB+128GB 黑色</p>
@@ -631,7 +632,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-5.jpg">
+          <img src="images/phone1-5.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米MIX 2S 6GB+128GB 黑色</p>
@@ -648,7 +649,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-6.jpg">
+          <img src="images/phone1-6.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米MIX 2S 8GB+256GB 陶瓷尊享版 白色</p>
@@ -665,7 +666,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-10.jpg">
+          <img src="images/phone1-10.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米8 6GB+128GB 白色</p>
@@ -682,7 +683,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-3.jpg">
+          <img src="images/phone1-3.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米6X 6GB+64GB 赤焰红</p>
@@ -699,7 +700,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-8.jpg">
+          <img src="images/phone1-8.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米6X 移动4G+版 6GB+64GB 流沙金</p>
@@ -716,7 +717,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="img/phone1-11.jpg">
+          <img src="images/phone1-11.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米8 SE 6GB+64GB 深灰 </p>
@@ -736,14 +737,16 @@
     </div>
   </section>
 </body>
-<script src="js/seckill.js"></script>
+<script src="js/index.js"></script>
 <script>
-  (function () {
-    var html = document.documentElement;
+  reset();
+  window.addEventListener("resize", reset);
+  function reset() {
+    var html = document.getElementsByTagName('html')[0];
     var hWidth = html.getBoundingClientRect().width;
     html.style.fontSize = hWidth / 15 + "px";
     console.log(hWidth);
-  })()
+  }
 </script>
 
 </html>
