--- a/1604-project/seckill.html
+++ b/1604-project/seckill.html
@@ -737,7 +737,7 @@
     </div>
   </section>
 </body>
-<script src="js/index.js"></script>
+<script src="js/seckill.js"></script>
 <script>
   reset();
   window.addEventListener("resize", reset);
