--- a/1604-project/seckill.html
+++ b/1604-project/seckill.html
@@ -15,10 +15,10 @@
 <body>
   <!-- 头部区域 -->
   <header>
-    <img src="images/l_arrow.png">
+    <img src="img/l_arrow.png">
     <span>小米秒杀</span>
-    <img src="images/collect.png">
-    <img src="images/cart.png">
+    <img src="img/collect.png">
+    <img src="img/cart.png">
   </header>
   <!-- 时间导航区域 -->
   <nav>
@@ -55,10 +55,10 @@
           </strong>
         </div>
       </div>
-      <img class="banner" src="images/banner.jpg">
+      <img class="banner" src="img/banner.jpg">
       <ul>
         <li class="seckill_box_lis">
-          <img src="images/phone1-1.jpg">
+          <img src="img/phone1-1.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米8 青春版 6GB+64GB 深空灰</p>
@@ -78,7 +78,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-2.jpg">
+          <img src="img/phone1-2.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米Play 全网通版 4GB+64GB 梦幻蓝</p>
@@ -98,7 +98,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-3.jpg">
+          <img src="img/phone1-3.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米6X 6GB+64GB 赤焰红</p>
@@ -118,7 +118,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-4.jpg">
+          <img src="img/phone1-4.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米8 屏幕指纹版 6GB+128GB 黑色</p>
@@ -138,7 +138,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-5.jpg">
+          <img src="img/phone1-5.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米MIX 2S 6GB+128GB 黑色</p>
@@ -158,7 +158,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-6.jpg">
+          <img src="img/phone1-6.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米MIX 2S 8GB+256GB 陶瓷尊享版 白色</p>
@@ -178,7 +178,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-7.jpg">
+          <img src="img/phone1-7.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米6X 全网通版 6GB+128GB 赤焰红</p>
@@ -198,7 +198,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-8.jpg">
+          <img src="img/phone1-8.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米6X 移动4G+版 6GB+64GB 流沙金</p>
@@ -218,7 +218,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-9.jpg">
+          <img src="img/phone1-9.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米8 屏幕指纹版 8GB+128GB 透明</p>
@@ -238,7 +238,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-10.jpg">
+          <img src="img/phone1-10.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米8 6GB+128GB 白色</p>
@@ -258,7 +258,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-11.jpg">
+          <img src="img/phone1-11.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米8 SE 6GB+64GB 深灰 </p>
@@ -278,7 +278,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-12.jpg">
+          <img src="img/phone1-12.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米Play 全网通版 6GB+64GB 暮光金</p>
@@ -298,7 +298,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-13.jpg">
+          <img src="img/phone1-13.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米8 SE 6GB+64GB 深灰 </p>
@@ -318,7 +318,7 @@
           </div>
         </li>
       </ul>
-      <img class="banner" src="images/banner2.jpg">
+      <img class="banner" src="img/banner2.jpg">
     </div>
     <div class="seckill_box">
       <div class="seckill_box_time">
@@ -336,10 +336,10 @@
           </strong>
         </div>
       </div>
-      <img class="banner" src="images/banner.jpg">
+      <img class="banner" src="img/banner.jpg">
       <ul>
         <li class="seckill_box_lis">
-          <img src="images/phone1-7.jpg">
+          <img src="img/phone1-7.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米6X 全网通版 6GB+128GB 赤焰红</p>
@@ -356,7 +356,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-1.jpg">
+          <img src="img/phone1-1.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米8 青春版 6GB+64GB 深空灰</p>
@@ -373,7 +373,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-2.jpg">
+          <img src="img/phone1-2.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米Play 全网通版 4GB+64GB 梦幻蓝</p>
@@ -390,7 +390,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-5.jpg">
+          <img src="img/phone1-5.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米MIX 2S 6GB+128GB 黑色</p>
@@ -407,7 +407,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-3.jpg">
+          <img src="img/phone1-3.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米6X 6GB+64GB 赤焰红</p>
@@ -424,7 +424,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-4.jpg">
+          <img src="img/phone1-4.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米8 屏幕指纹版 6GB+128GB 黑色</p>
@@ -441,7 +441,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-5.jpg">
+          <img src="img/phone1-5.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米MIX 2S 6GB+128GB 黑色</p>
@@ -458,7 +458,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-6.jpg">
+          <img src="img/phone1-6.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米MIX 2S 8GB+256GB 陶瓷尊享版 白色</p>
@@ -475,7 +475,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-8.jpg">
+          <img src="img/phone1-8.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米6X 移动4G+版 6GB+64GB 流沙金</p>
@@ -492,7 +492,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-11.jpg">
+          <img src="img/phone1-11.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米8 SE 6GB+64GB 深灰 </p>
@@ -509,7 +509,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-10.jpg">
+          <img src="img/phone1-10.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米8 6GB+128GB 白色</p>
@@ -544,10 +544,10 @@
           </strong>
         </div>
       </div>
-      <img class="banner" src="images/banner.jpg">
+      <img class="banner" src="img/banner.jpg">
       <ul>
         <li class="seckill_box_lis">
-          <img src="images/phone1-5.jpg">
+          <img src="img/phone1-5.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米MIX 2S 6GB+128GB 黑色</p>
@@ -564,7 +564,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-7.jpg">
+          <img src="img/phone1-7.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米6X 全网通版 6GB+128GB 赤焰红</p>
@@ -581,7 +581,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-1.jpg">
+          <img src="img/phone1-1.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米8 青春版 6GB+64GB 深空灰</p>
@@ -598,7 +598,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-2.jpg">
+          <img src="img/phone1-2.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米Play 全网通版 4GB+64GB 梦幻蓝</p>
@@ -615,7 +615,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-4.jpg">
+          <img src="img/phone1-4.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米8 屏幕指纹版 6GB+128GB 黑色</p>
@@ -632,7 +632,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-5.jpg">
+          <img src="img/phone1-5.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米MIX 2S 6GB+128GB 黑色</p>
@@ -649,7 +649,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-6.jpg">
+          <img src="img/phone1-6.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米MIX 2S 8GB+256GB 陶瓷尊享版 白色</p>
@@ -666,7 +666,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-10.jpg">
+          <img src="img/phone1-10.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米8 6GB+128GB 白色</p>
@@ -683,7 +683,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-3.jpg">
+          <img src="img/phone1-3.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米6X 6GB+64GB 赤焰红</p>
@@ -700,7 +700,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-8.jpg">
+          <img src="img/phone1-8.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米6X 移动4G+版 6GB+64GB 流沙金</p>
@@ -717,7 +717,7 @@
           </div>
         </li>
         <li class="seckill_box_lis">
-          <img src="images/phone1-11.jpg">
+          <img src="img/phone1-11.jpg">
           <div class="seckill_box_lis_r">
             <div class="des">
               <p>小米8 SE 6GB+64GB 深灰 </p>
